[frontend] - fix width for text - comment bug - skip and nop tag same colour as prediction - textFrame size through variables + width - config for prediction stat -truncate tag in history relates #594

--- a/frontend/src/styles/_annotations.scss
+++ b/frontend/src/styles/_annotations.scss
@@ -78,9 +78,10 @@
   line-height: 1.6;
 
   padding: 16px;
-  max-width: 40vw;
+  height: var(--height);
+  width: var(--width);
   @include media-breakpoint-down(lg) {
-    max-width: 100vw;
+    width: 100%;
   }
 
   display: flex;
@@ -225,26 +226,6 @@
       @include media-breakpoint-down(lg) {
         flex-grow: 1;
       }
-
-      display: flex;
-      justify-content: start;
-      align-items: center;
-      position: relative;
-      text-align: start;
-      span {
-        @extend .text-truncate;
-        display: inline-block;
-        max-width: 50%;
-        white-space: preserve nowrap;
-      }
-      span:first-child {
-        text-overflow: '‥';
-      }
-      span:last-child {
-        text-overflow: '‥';
-        direction: rtl;
-        text-align: end;
-      }
     }
     .badge {
       flex-shrink: 0;
@@ -266,5 +247,31 @@
   }
   .annotation-comment {
     width: 100%;
+  }
+}
+
+.truncate-middle {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: relative;
+  text-align: start;
+
+  min-width: 0;
+  flex-shrink: 1;
+  flex-grow: 1;
+  span {
+    @extend .text-truncate;
+    display: inline-block;
+    max-width: 50%;
+    white-space: preserve nowrap;
+  }
+  span:first-child {
+    text-overflow: '..';
+  }
+  span:last-child {
+    text-overflow: '..';
+    direction: rtl;
+    text-align: end;
   }
 }
